// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Given the Sidebar component and strongBalance, weakBalance are NOT of BigNumber type when the component is rendered should match the snapshot 1`] = `
<DocumentFragment>
  .c0 {
  padding: 4px;
  background-color: #201d2a;
  border-radius: 6px;
  box-sizing: border-box;
}

.c22 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
  color: #c75a5a;
  font-weight: 500;
}

.c22:before {
  content: '';
  display: block;
  width: 12px;
  height: 12px;
  background-color: currentColor;
  border-radius: 50%;
}

.c16 {
  display: none;
  padding: 12px 24px;
  position: absolute;
  bottom: -48px;
  background-color: #302E3D;
  border-radius: 8px;
  box-shadow: 0 5px 50px 0 rgba(0,0,0,0.36);
  color: #e1dfeb;
  font-size: 14px;
  font-family: 'Poppins',sans-serif;
  z-index: 1;
}

.c14 {
  position: relative;
}

.c14:hover .c15 {
  display: block;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  gap: 32px;
  height: 100px;
  padding: 24px 48px;
  background-color: #1a1823;
  border-radius: 4px;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
  grid-column: 1/4;
}

.c4 span {
  font-size: 16px;
  font-weight: 500;
  color: #9895a6;
}

.c19 {
  width: 170px;
  height: 50px;
  background-color: #e1dfeb;
  border: none;
  border-radius: 8px;
  color: #1a1823;
  font-weight: 600;
  font-size: 14px;
}

.c19:hover {
  background-color: #fff;
}

.c19:active {
  background-color: #9895a6;
}

.c19:disabled {
  cursor: not-allowed;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 14px;
  padding: 24px 40px;
  border-bottom: 1px solid #302E3D;
}

.c5 strong {
  display: block;
  margin-bottom: 10px;
  font-weight: 400;
  color: #9895a6;
}

.c7 {
  font-family: 'Bebas Neue',sans-serif;
  font-size: 28px;
  font-weight: 400;
}

.c7 > small {
  margin-left: 5px;
  font-family: 'Poppins',sans-serif;
  color: #9895a6;
  font-size: 11px;
}

.c13 {
  font-family: 'Bebas Neue',sans-serif;
  font-size: 28px;
  font-weight: 700;
}

.c13 > small {
  margin-left: 5px;
  font-family: 'Poppins',sans-serif;
  color: #9895a6;
  font-size: 11px;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c8 {
  position: relative;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 40px;
  width: 40px;
  background-color: #302E3D;
  border-radius: 8px;
  border: none;
  font-size: 20px;
  font-weight: 500;
  color: #5d5b70;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c12:hover {
  background-color: #8d89a3;
  color: #1a1823;
}

.c12:active {
  background-color: #191820;
}

.c17 {
  display: inline-block;
  padding: 4px 8px;
  margin-top: 6px;
  position: relative;
  background-color: #2a303f;
  border-radius: 6px;
  color: #88d1ff;
  font-size: 12px;
  font-weight: 400;
  font-family: Poppins,sans-serif;
}

.c17 svg {
  position: absolute;
  right: 4px;
  top: 2px;
  cursor: pointer;
}

.c17 svg * {
  fill: currentColor;
}

.c18 {
  margin-top: 20px;
  min-width: 150px;
}

.c9 {
  display: none;
  width: 360px;
  padding: 32px 40px;
  position: absolute;
  right: 65px;
  top: -35px;
  background-color: #302E3D;
  border-radius: 8px;
  box-shadow: 0 5px 50px 0 rgba(0,0,0,0.36);
  z-index: 1;
  cursor: pointer;
}

.c9:after {
  content: '';
  display: block;
  position: absolute;
  right: -20px;
  top: 25px;
  width: 0;
  height: 0;
  border-top: 30px solid transparent;
  border-bottom: 30px solid transparent;
  border-left: 30px solid #302E3D;
}

.c10 {
  margin-bottom: 16px;
  font-size: 14px;
  font-weight: 500;
}

.c11 {
  color: #9895a6;
}

.c23 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  gap: 16px;
  padding: 24px 40px;
  margin-top: auto;
}

.c26 {
  display: block;
  margin-top: 10px;
  background: transparent;
  border: none;
  color: #9895a6;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c26:hover {
  color: #e1dfeb;
}

.c26:active {
  color: #656273;
}

.c25 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 40px;
  width: 40px;
  background-color: #302E3D;
  border-radius: 8px;
  font-size: 20px;
  color: #5d5b70;
  cursor: pointer;
}

.c25 svg {
  width: 20px;
  height: 20px;
}

.c25:hover {
  background-color: #47445a;
}

.c25:hover svg * {
  fill: #e1dfeb;
}

.c25:active {
  background-color: #191820;
}

.c24 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 16px;
}

.c20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 20px;
  padding: 40px;
}

.c21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c21 > strong {
  font-weight: 400;
  color: #9895a6;
  white-space: nowrap;
}

.c21 > span {
  font-weight: 500;
}

.c21 a {
  color: #9895a6;
}

.c1 {
  height: 100%;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 100%;
}

@media screen and (max-width:700px) {
  .c0 {
    border-radius: 0;
    padding: 0;
  }
}

@media screen and (max-width:1440px) {
  .c3 {
    gap: 24px;
    padding: 24px 48px;
  }
}

@media screen and (max-width:1180px) {
  .c3 {
    grid-template-columns: 32px 56px 32px;
    gap: 24px;
    padding: 24px;
  }
}

@media screen and (max-width:1024px) {
  .c3 {
    grid-template-rows: none;
    grid-template-columns: 56px 250px 32px 32px;
    justify-items: start;
    -webkit-box-pack: start;
    -webkit-justify-content: start;
    -ms-flex-pack: start;
    justify-content: start;
    gap: 10px;
    height: 100px;
    background-color: #201d2a;
    border-bottom: 1px solid #302E3D;
    border-radius: 0;
  }
}

@media screen and (max-width:834px) {
  .c3 {
    grid-template-columns: 56px 150px 32px 32px;
    border-radius: 0;
  }
}

@media screen and (max-width:700px) {
  .c3 {
    grid-template-columns: 56px 1fr 44px 44px;
    gap: 16px;
    padding: 20px;
  }
}

@media screen and (max-width:375px) {
  .c3 {
    grid-column: 1fr 44px 44px;
  }
}

@media screen and (max-width:1024px) {
  .c4 {
    -webkit-align-items: flex-start;
    -webkit-box-align: flex-start;
    -ms-flex-align: flex-start;
    align-items: flex-start;
    grid-column: 2/3;
    grid-row: 1/2;
    padding-left: 14px;
  }
}

@media screen and (max-width:375px) {
  .c4 {
    grid-column: 1/2;
    padding: 0;
  }
}

@media screen and (max-width:1440px) {
  .c4 span {
    font-size: 14px;
  }
}

@media screen and (max-width:1440px) {
  .c19 {
    width: 135px;
    height: 40px;
    font-size: 12px;
  }
}

@media screen and (max-width:480px) {
  .c19 {
    font-size: 14px;
  }
}

@media screen and (max-width:1440px) {
  .c5 {
    padding: 24px;
  }
}

@media screen and (max-width:1024px) {
  .c5 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    grid-column: 1/3;
    grid-row: 2/3;
    border: none;
  }
}

@media screen and (max-width:834px) {
  .c5 {
    gap: 40px;
  }
}

@media screen and (max-width:700px) {
  .c5 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-align-items: stretch;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
    padding: 20px;
    gap: 0px;
  }
}

@media screen and (max-width:1440px) {
  .c7 {
    font-size: 20px;
  }
}

@media screen and (max-width:1440px) {
  .c13 {
    font-size: 20px;
  }
}

@media screen and (max-width:1440px) {
  .c12 {
    width: 32px;
    height: 32px;
    font-size: 14px;
  }
}

@media screen and (max-width:1024px) {
  .c12 {
    margin-left: 24px;
  }
}

@media screen and (max-width:1024px) {
  .c18 {
    margin: 0 0 0 auto;
  }
}

@media screen and (max-width:700px) {
  .c18 {
    padding-top: 10px;
    margin: 0;
  }
}

@media screen and (max-width:1024px) {
  .c9 {
    width: 300px;
    padding: 24px;
    right: -135px;
    top: 50px;
  }

  .c9:after {
    right: 130px;
    top: -35px;
    border-top: 20px solid transparent;
    border-bottom: 20px solid #302E3D;
    border-left: 20px solid transparent;
    border-right: 20px solid transparent;
  }
}

@media screen and (max-width:700px) {
  .c9 {
    width: 240px;
    padding: 16px 24px;
    right: 50px;
    top: -55px;
  }

  .c9:after {
    right: -30px;
    top: 50px;
    border-top: 20px solid transparent;
    border-bottom: 20px solid transparent;
    border-left: 20px solid #302E3D;
    border-right: 20px solid transparent;
  }
}

@media screen and (max-width:1440px) {
  .c23 {
    padding: 20px 24px;
  }
}

@media screen and (max-width:1024px) {
  .c23 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    gap: 12px;
    width: 100%;
    padding: 40px 24px;
    position: absolute;
    bottom: 0;
    left: 0;
  }
}

@media screen and (max-width:700px) {
  .c23 {
    padding: 24px 20px;
    position: relative;
    background-color: #1a1823;
  }
}

@media screen and (max-width:1024px) {
  .c26 {
    margin: 0;
  }
}

@media screen and (max-width:1440px) {
  .c25 {
    width: 32px;
    height: 32px;
    font-size: 14px;
  }

  .c25 svg {
    width: 16px;
    height: 16px;
  }
}

@media screen and (max-width:1024px) {
  .c24 {
    gap: 12px;
  }
}

@media screen and (max-width:1440px) {
  .c20 {
    padding: 24px;
  }
}

@media screen and (max-width:1024px) {
  .c20 {
    grid-column: 2/3;
    grid-row: 1/2;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    gap: 40px;
    border-bottom: 1px solid #302E3D;
  }
}

@media screen and (max-width:700px) {
  .c20 {
    display: none;
  }
}

@media screen and (max-width:1024px) {
  .c21 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
    gap: 10px;
  }
}

@media screen and (max-width:1024px) {
  .c2 {
    display: grid;
    grid-template-columns: 1fr auto;
    grid-template-rows: 100px 100px;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
  }
}

@media screen and (max-width:834px) {

}

@media screen and (max-width:700px) {
  .c2 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

<div
    id="tour-sidebar"
  >
    <div
      class="c0 c1"
    >
      <div
        class="c2"
      >
        <header
          class="c3"
        >
          <div
            class="c4"
          >
            <p>
              My Account
            </p>
            <span />
          </div>
        </header>
        <div
          class="c5"
        >
          <div
            class="c6"
          >
            <div
              class=""
            >
              <strong>
                ETH Balance
              </strong>
              <div
                class="c7"
              >
                Loading
                <small />
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c9"
              >
                <h5
                  class="c10"
                >
                  ETH Balance
                </h5>
                <p
                  class="c11"
                >
                  This is your connected wallet Ether balance.
                </p>
              </div>
              <button
                class="c12"
              >
                i
              </button>
            </div>
          </div>
          <div
            class="c6"
          >
            <div
              class=""
            >
              <strong>
                wNOM Balance
              </strong>
              <div
                class="c13"
              >
                Loading
                <small />
                <div
                  class="c14"
                >
                  <div
                    class="c15 c16"
                  >
                    Loading
                  </div>
                  <div
                    class="c17"
                  >
                    <span>
                      Loading approved
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c9"
              >
                <h5
                  class="c10"
                >
                  NOM Balance
                </h5>
                <p
                  class="c11"
                >
                  This shows your total wNOM balance and the amount approved for selling. You must approve wNOM for selling before it can be sold.
                </p>
              </div>
              <button
                class="c12"
              >
                i
              </button>
            </div>
          </div>
          <div
            class="c18"
          >
            <button
              class="c19"
              style="width: 100%;"
            >
              Bridge wNOM to NOM
            </button>
          </div>
        </div>
        <div
          class="c20"
        >
          <div
            class="c21"
          >
            <strong>
              Connection
            </strong>
            <div
              class="c22"
            >
              Loading
            </div>
          </div>
          <div
            class="c21"
          >
            <strong>
              Chain Id
            </strong>
            <span />
          </div>
          <div
            class="c21"
          >
            <strong>
              Block Number
            </strong>
            <span>
              12345678
            </span>
          </div>
          <div
            class="c21"
          >
            <strong>
              Contract Address
            </strong>
            <span>
              <a
                href="https://etherscan.com"
                rel="noreferrer"
                target="_blank"
              >
                Etherscan
              </a>
            </span>
          </div>
        </div>
        <footer
          class="c23"
        >
          <div
            class="c24"
          >
            <a
              class="c25"
              href="https://onomy.io/"
              target="_blank"
            >
              <svg
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8.778 20.012a4.057 4.057 0 01-4.2-4.2v-6.24a4.077 4.077 0 014.03-4.38h2.9a.547.547 0 01.07 1.088h-2.8a2.969 2.969 0 00-3.1 3.118v6.234a2.986 2.986 0 002.939 3.283h6.609a2.965 2.965 0 003.1-3.112v-3.111a.547.547 0 011.09-.074l.005.074v2.94a4.073 4.073 0 01-4.03 4.377h-.171zm2.962-7.781a.785.785 0 01.1-1.033l.085-.088 4.694-4.378-2.041-.066a.692.692 0 01-.663-.613v-.1a.693.693 0 01.608-.668h.1l3.72.117a.692.692 0 01.666.615v.1l-.131 3.72a.693.693 0 01-1.382.051v-.1l.075-2.039-4.699 4.375a1.024 1.024 0 01-.681.289.6.6 0 01-.451-.182z"
                  data-name="Edit Square"
                  fill="#5e5b70"
                />
              </svg>
            </a>
            <a
              class="c25"
              href="https://discord.gg/27r73SYAkQ"
              target="_blank"
            >
              <svg
                viewBox="0 0 20.001 15.237"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M16.932 1.266A16.658 16.658 0 0012.859.001c-.027 0-.053 0-.064.032a10.981 10.981 0 00-.507 1.041 15.282 15.282 0 00-4.575 0A7.37 7.37 0 007.179.033a.065.065 0 00-.064-.032 20.026 20.026 0 00-4.057 1.265.035.035 0 00-.027.021A16.59 16.59 0 00.095 12.658a.085.085 0 00.027.053 16.206 16.206 0 005 2.525c.027 0 .053 0 .069-.021a12.01 12.01 0 001.025-1.666.061.061 0 00-.037-.085 12 12 0 01-1.568-.745.062.062 0 010-.107c.107-.08.214-.16.31-.24a.068.068 0 01.064-.011 11.791 11.791 0 0010.036 0 .067.067 0 01.064.005c.1.085.2.165.31.246a.068.068 0 010 .107 10.532 10.532 0 01-1.564.747.061.061 0 00-.032.091 13.174 13.174 0 001.014 1.655.058.058 0 00.069.021 16.676 16.676 0 005.007-2.525.059.059 0 00.027-.053A16.716 16.716 0 0016.96 1.282c0-.011-.016-.021-.027-.021zm-10.25 9.129a2.041 2.041 0 111.815-2.029 1.923 1.923 0 01-1.815 2.029zm6.673 0a2.041 2.041 0 111.815-2.029 1.923 1.923 0 01-1.815 2.029z"
                  fill="#5e5b70"
                />
              </svg>
            </a>
            <a
              class="c25"
              href="https://t.me/onomyprotocol"
              target="_blank"
            >
              <svg
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M2.966 11.085L13.195 6.87c1.01-.439 4.435-1.844 4.435-1.844s1.583-.614 1.448.875c-.044.615-.4 2.766-.746 5.093l-1.1 6.893s-.088 1.01-.834 1.185a3.611 3.611 0 01-2.2-.79c-.176-.132-3.293-2.107-4.434-3.073a.832.832 0 01.044-1.4 168.85 168.85 0 004.61-4.39c.527-.527 1.054-1.756-1.141-.263l-6.184 4.168a2.58 2.58 0 01-2.02.044c-1.317-.395-2.854-.922-2.854-.922s-1.054-.659.746-1.361z"
                  fill="#5e5b70"
                />
              </svg>
            </a>
            <a
              class="c25"
              href="https://medium.com/onomy-protocol"
              target="_blank"
            >
              <svg
                viewBox="0 0 195 195"
                xmlns="http://www.w3.org/2000/svg"
              >
                <defs />
                <g
                  fill="none"
                  fill-rule="evenodd"
                  id="Page-1"
                  stroke="none"
                  stroke-width="1"
                >
                  <g
                    fill-rule="nonzero"
                    id="Monogram"
                  >
                    <path
                      d="M46.5340803,65.2157554 C46.6968378,63.6076572 46.0836,62.018231 44.8828198,60.93592 L32.6512605,46.2010582 L32.6512605,44 L70.6302521,44 L99.9859944,108.380952 L125.794585,44 L162,44 L162,46.2010582 L151.542017,56.2281011 C150.640424,56.9153477 150.193188,58.0448862 150.380019,59.1628454 L150.380019,132.837155 C150.193188,133.955114 150.640424,135.084652 151.542017,135.771899 L161.755369,145.798942 L161.755369,148 L110.38282,148 L110.38282,145.798942 L120.963119,135.527337 C122.002801,134.487948 122.002801,134.182246 122.002801,132.592593 L122.002801,73.0417402 L92.585901,147.755438 L88.6106443,147.755438 L54.3622782,73.0417402 L54.3622782,123.115814 C54.0767278,125.221069 54.7759199,127.3406 56.2581699,128.863022 L70.0186741,145.55438 L70.0186741,147.755438 L31,147.755438 L31,145.55438 L44.7605042,128.863022 C46.2319621,127.338076 46.8903838,125.204485 46.5340803,123.115814 L46.5340803,65.2157554 Z"
                      fill="#5e5b70"
                      id="Shape"
                    />
                  </g>
                </g>
              </svg>
            </a>
            <a
              class="c25"
              href="https://twitter.com/onomyprotocol"
              target="_blank"
            >
              <svg
                viewBox="0 0 20 20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M16.555 6.438v.46a10.4 10.4 0 01-.66 3.6 10.744 10.744 0 01-1.961 3.282 9.729 9.729 0 01-3.2 2.4 10.445 10.445 0 01-4.383.921 10.247 10.247 0 01-2.922-.42 9.937 9.937 0 01-2.6-1.181q.42.041.86.04a7.14 7.14 0 002.381-.4 7.457 7.457 0 002.081-1.121 3.592 3.592 0 01-2.081-.73 3.463 3.463 0 01-1.261-1.771 3.579 3.579 0 00.66.06 3.7 3.7 0 00.941-.12 3.472 3.472 0 01-1.461-.67 3.567 3.567 0 01-1.031-1.261 3.749 3.749 0 01-.39-1.591v-.06a3.369 3.369 0 001.641.46 3.617 3.617 0 01-1.171-1.291 3.517 3.517 0 01-.43-1.711 3.574 3.574 0 01.48-1.8 10.262 10.262 0 007.4 3.762 4.156 4.156 0 01-.08-.82 3.5 3.5 0 01.48-1.8 3.627 3.627 0 011.311-1.311 3.462 3.462 0 011.791-.49 3.563 3.563 0 012.622 1.141 6.994 6.994 0 002.281-.881 3.481 3.481 0 01-.61 1.151 3.694 3.694 0 01-.971.851 7.316 7.316 0 002.081-.58 7.525 7.525 0 01-1.798 1.881z"
                  fill="#8d89a3"
                  opacity="0.5"
                />
              </svg>
            </a>
          </div>
          <button
            class="c26"
          >
            Logout
          </button>
        </footer>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Given the Sidebar component and strongBalance, weakBalance are of BigNumber type when the component is rendered should match the snapshot 1`] = `
<DocumentFragment>
  .c0 {
  padding: 4px;
  background-color: #201d2a;
  border-radius: 6px;
  box-sizing: border-box;
}

.c22 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
  color: #c75a5a;
  font-weight: 500;
}

.c22:before {
  content: '';
  display: block;
  width: 12px;
  height: 12px;
  background-color: currentColor;
  border-radius: 50%;
}

.c16 {
  display: none;
  padding: 12px 24px;
  position: absolute;
  bottom: -48px;
  background-color: #302E3D;
  border-radius: 8px;
  box-shadow: 0 5px 50px 0 rgba(0,0,0,0.36);
  color: #e1dfeb;
  font-size: 14px;
  font-family: 'Poppins',sans-serif;
  z-index: 1;
}

.c14 {
  position: relative;
}

.c14:hover .c15 {
  display: block;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  gap: 32px;
  height: 100px;
  padding: 24px 48px;
  background-color: #1a1823;
  border-radius: 4px;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
  grid-column: 1/4;
}

.c4 span {
  font-size: 16px;
  font-weight: 500;
  color: #9895a6;
}

.c19 {
  width: 170px;
  height: 50px;
  background-color: #e1dfeb;
  border: none;
  border-radius: 8px;
  color: #1a1823;
  font-weight: 600;
  font-size: 14px;
}

.c19:hover {
  background-color: #fff;
}

.c19:active {
  background-color: #9895a6;
}

.c19:disabled {
  cursor: not-allowed;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 14px;
  padding: 24px 40px;
  border-bottom: 1px solid #302E3D;
}

.c5 strong {
  display: block;
  margin-bottom: 10px;
  font-weight: 400;
  color: #9895a6;
}

.c7 {
  font-family: 'Bebas Neue',sans-serif;
  font-size: 28px;
  font-weight: 400;
}

.c7 > small {
  margin-left: 5px;
  font-family: 'Poppins',sans-serif;
  color: #9895a6;
  font-size: 11px;
}

.c13 {
  font-family: 'Bebas Neue',sans-serif;
  font-size: 28px;
  font-weight: 700;
}

.c13 > small {
  margin-left: 5px;
  font-family: 'Poppins',sans-serif;
  color: #9895a6;
  font-size: 11px;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c8 {
  position: relative;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 40px;
  width: 40px;
  background-color: #302E3D;
  border-radius: 8px;
  border: none;
  font-size: 20px;
  font-weight: 500;
  color: #5d5b70;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c12:hover {
  background-color: #8d89a3;
  color: #1a1823;
}

.c12:active {
  background-color: #191820;
}

.c17 {
  display: inline-block;
  padding: 4px 8px;
  margin-top: 6px;
  position: relative;
  background-color: #2a303f;
  border-radius: 6px;
  color: #88d1ff;
  font-size: 12px;
  font-weight: 400;
  font-family: Poppins,sans-serif;
}

.c17 svg {
  position: absolute;
  right: 4px;
  top: 2px;
  cursor: pointer;
}

.c17 svg * {
  fill: currentColor;
}

.c18 {
  margin-top: 20px;
  min-width: 150px;
}

.c9 {
  display: none;
  width: 360px;
  padding: 32px 40px;
  position: absolute;
  right: 65px;
  top: -35px;
  background-color: #302E3D;
  border-radius: 8px;
  box-shadow: 0 5px 50px 0 rgba(0,0,0,0.36);
  z-index: 1;
  cursor: pointer;
}

.c9:after {
  content: '';
  display: block;
  position: absolute;
  right: -20px;
  top: 25px;
  width: 0;
  height: 0;
  border-top: 30px solid transparent;
  border-bottom: 30px solid transparent;
  border-left: 30px solid #302E3D;
}

.c10 {
  margin-bottom: 16px;
  font-size: 14px;
  font-weight: 500;
}

.c11 {
  color: #9895a6;
}

.c23 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  gap: 16px;
  padding: 24px 40px;
  margin-top: auto;
}

.c26 {
  display: block;
  margin-top: 10px;
  background: transparent;
  border: none;
  color: #9895a6;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c26:hover {
  color: #e1dfeb;
}

.c26:active {
  color: #656273;
}

.c25 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 40px;
  width: 40px;
  background-color: #302E3D;
  border-radius: 8px;
  font-size: 20px;
  color: #5d5b70;
  cursor: pointer;
}

.c25 svg {
  width: 20px;
  height: 20px;
}

.c25:hover {
  background-color: #47445a;
}

.c25:hover svg * {
  fill: #e1dfeb;
}

.c25:active {
  background-color: #191820;
}

.c24 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 16px;
}

.c20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 20px;
  padding: 40px;
}

.c21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c21 > strong {
  font-weight: 400;
  color: #9895a6;
  white-space: nowrap;
}

.c21 > span {
  font-weight: 500;
}

.c21 a {
  color: #9895a6;
}

.c1 {
  height: 100%;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 100%;
}

@media screen and (max-width:700px) {
  .c0 {
    border-radius: 0;
    padding: 0;
  }
}

@media screen and (max-width:1440px) {
  .c3 {
    gap: 24px;
    padding: 24px 48px;
  }
}

@media screen and (max-width:1180px) {
  .c3 {
    grid-template-columns: 32px 56px 32px;
    gap: 24px;
    padding: 24px;
  }
}

@media screen and (max-width:1024px) {
  .c3 {
    grid-template-rows: none;
    grid-template-columns: 56px 250px 32px 32px;
    justify-items: start;
    -webkit-box-pack: start;
    -webkit-justify-content: start;
    -ms-flex-pack: start;
    justify-content: start;
    gap: 10px;
    height: 100px;
    background-color: #201d2a;
    border-bottom: 1px solid #302E3D;
    border-radius: 0;
  }
}

@media screen and (max-width:834px) {
  .c3 {
    grid-template-columns: 56px 150px 32px 32px;
    border-radius: 0;
  }
}

@media screen and (max-width:700px) {
  .c3 {
    grid-template-columns: 56px 1fr 44px 44px;
    gap: 16px;
    padding: 20px;
  }
}

@media screen and (max-width:375px) {
  .c3 {
    grid-column: 1fr 44px 44px;
  }
}

@media screen and (max-width:1024px) {
  .c4 {
    -webkit-align-items: flex-start;
    -webkit-box-align: flex-start;
    -ms-flex-align: flex-start;
    align-items: flex-start;
    grid-column: 2/3;
    grid-row: 1/2;
    padding-left: 14px;
  }
}

@media screen and (max-width:375px) {
  .c4 {
    grid-column: 1/2;
    padding: 0;
  }
}

@media screen and (max-width:1440px) {
  .c4 span {
    font-size: 14px;
  }
}

@media screen and (max-width:1440px) {
  .c19 {
    width: 135px;
    height: 40px;
    font-size: 12px;
  }
}

@media screen and (max-width:480px) {
  .c19 {
    font-size: 14px;
  }
}

@media screen and (max-width:1440px) {
  .c5 {
    padding: 24px;
  }
}

@media screen and (max-width:1024px) {
  .c5 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    grid-column: 1/3;
    grid-row: 2/3;
    border: none;
  }
}

@media screen and (max-width:834px) {
  .c5 {
    gap: 40px;
  }
}

@media screen and (max-width:700px) {
  .c5 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-align-items: stretch;
    -webkit-box-align: stretch;
    -ms-flex-align: stretch;
    align-items: stretch;
    padding: 20px;
    gap: 0px;
  }
}

@media screen and (max-width:1440px) {
  .c7 {
    font-size: 20px;
  }
}

@media screen and (max-width:1440px) {
  .c13 {
    font-size: 20px;
  }
}

@media screen and (max-width:1440px) {
  .c12 {
    width: 32px;
    height: 32px;
    font-size: 14px;
  }
}

@media screen and (max-width:1024px) {
  .c12 {
    margin-left: 24px;
  }
}

@media screen and (max-width:1024px) {
  .c18 {
    margin: 0 0 0 auto;
  }
}

@media screen and (max-width:700px) {
  .c18 {
    padding-top: 10px;
    margin: 0;
  }
}

@media screen and (max-width:1024px) {
  .c9 {
    width: 300px;
    padding: 24px;
    right: -135px;
    top: 50px;
  }

  .c9:after {
    right: 130px;
    top: -35px;
    border-top: 20px solid transparent;
    border-bottom: 20px solid #302E3D;
    border-left: 20px solid transparent;
    border-right: 20px solid transparent;
  }
}

@media screen and (max-width:700px) {
  .c9 {
    width: 240px;
    padding: 16px 24px;
    right: 50px;
    top: -55px;
  }

  .c9:after {
    right: -30px;
    top: 50px;
    border-top: 20px solid transparent;
    border-bottom: 20px solid transparent;
    border-left: 20px solid #302E3D;
    border-right: 20px solid transparent;
  }
}

@media screen and (max-width:1440px) {
  .c23 {
    padding: 20px 24px;
  }
}

@media screen and (max-width:1024px) {
  .c23 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    gap: 12px;
    width: 100%;
    padding: 40px 24px;
    position: absolute;
    bottom: 0;
    left: 0;
  }
}

@media screen and (max-width:700px) {
  .c23 {
    padding: 24px 20px;
    position: relative;
    background-color: #1a1823;
  }
}

@media screen and (max-width:1024px) {
  .c26 {
    margin: 0;
  }
}

@media screen and (max-width:1440px) {
  .c25 {
    width: 32px;
    height: 32px;
    font-size: 14px;
  }

  .c25 svg {
    width: 16px;
    height: 16px;
  }
}

@media screen and (max-width:1024px) {
  .c24 {
    gap: 12px;
  }
}

@media screen and (max-width:1440px) {
  .c20 {
    padding: 24px;
  }
}

@media screen and (max-width:1024px) {
  .c20 {
    grid-column: 2/3;
    grid-row: 1/2;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    gap: 40px;
    border-bottom: 1px solid #302E3D;
  }
}

@media screen and (max-width:700px) {
  .c20 {
    display: none;
  }
}

@media screen and (max-width:1024px) {
  .c21 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
    gap: 10px;
  }
}

@media screen and (max-width:1024px) {
  .c2 {
    display: grid;
    grid-template-columns: 1fr auto;
    grid-template-rows: 100px 100px;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
  }
}

@media screen and (max-width:834px) {

}

@media screen and (max-width:700px) {
  .c2 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

<div
    id="tour-sidebar"
  >
    <div
      class="c0 c1"
    >
      <div
        class="c2"
      >
        <header
          class="c3"
        >
          <div
            class="c4"
          >
            <p>
              My Account
            </p>
            <span />
          </div>
        </header>
        <div
          class="c5"
        >
          <div
            class="c6"
          >
            <div
              class=""
            >
              <strong>
                ETH Balance
              </strong>
              <div
                class="c7"
              >
                0.000000
                <small>
                   = $0
                </small>
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c9"
              >
                <h5
                  class="c10"
                >
                  ETH Balance
                </h5>
                <p
                  class="c11"
                >
                  This is your connected wallet Ether balance.
                </p>
              </div>
              <button
                class="c12"
              >
                i
              </button>
            </div>
          </div>
          <div
            class="c6"
          >
            <div
              class=""
            >
              <strong>
                wNOM Balance
              </strong>
              <div
                class="c13"
              >
                0.000000
                <small />
                <div
                  class="c14"
                >
                  <div
                    class="c15 c16"
                  >
                    Loading
                  </div>
                  <div
                    class="c17"
                  >
                    <span>
                      Loading approved
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="c8"
            >
              <div
                class="c9"
              >
                <h5
                  class="c10"
                >
                  NOM Balance
                </h5>
                <p
                  class="c11"
                >
                  This shows your total wNOM balance and the amount approved for selling. You must approve wNOM for selling before it can be sold.
                </p>
              </div>
              <button
                class="c12"
              >
                i
              </button>
            </div>
          </div>
          <div
            class="c18"
          >
            <button
              class="c19"
              style="width: 100%;"
            >
              Bridge wNOM to NOM
            </button>
          </div>
        </div>
        <div
          class="c20"
        >
          <div
            class="c21"
          >
            <strong>
              Connection
            </strong>
            <div
              class="c22"
            >
              Loading
            </div>
          </div>
          <div
            class="c21"
          >
            <strong>
              Chain Id
            </strong>
            <span />
          </div>
          <div
            class="c21"
          >
            <strong>
              Block Number
            </strong>
            <span>
              12345678
            </span>
          </div>
          <div
            class="c21"
          >
            <strong>
              Contract Address
            </strong>
            <span>
              <a
                href="https://etherscan.com"
                rel="noreferrer"
                target="_blank"
              >
                Etherscan
              </a>
            </span>
          </div>
        </div>
        <footer
          class="c23"
        >
          <div
            class="c24"
          >
            <a
              class="c25"
              href="https://onomy.io/"
              target="_blank"
            >
              <svg
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8.778 20.012a4.057 4.057 0 01-4.2-4.2v-6.24a4.077 4.077 0 014.03-4.38h2.9a.547.547 0 01.07 1.088h-2.8a2.969 2.969 0 00-3.1 3.118v6.234a2.986 2.986 0 002.939 3.283h6.609a2.965 2.965 0 003.1-3.112v-3.111a.547.547 0 011.09-.074l.005.074v2.94a4.073 4.073 0 01-4.03 4.377h-.171zm2.962-7.781a.785.785 0 01.1-1.033l.085-.088 4.694-4.378-2.041-.066a.692.692 0 01-.663-.613v-.1a.693.693 0 01.608-.668h.1l3.72.117a.692.692 0 01.666.615v.1l-.131 3.72a.693.693 0 01-1.382.051v-.1l.075-2.039-4.699 4.375a1.024 1.024 0 01-.681.289.6.6 0 01-.451-.182z"
                  data-name="Edit Square"
                  fill="#5e5b70"
                />
              </svg>
            </a>
            <a
              class="c25"
              href="https://discord.gg/27r73SYAkQ"
              target="_blank"
            >
              <svg
                viewBox="0 0 20.001 15.237"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M16.932 1.266A16.658 16.658 0 0012.859.001c-.027 0-.053 0-.064.032a10.981 10.981 0 00-.507 1.041 15.282 15.282 0 00-4.575 0A7.37 7.37 0 007.179.033a.065.065 0 00-.064-.032 20.026 20.026 0 00-4.057 1.265.035.035 0 00-.027.021A16.59 16.59 0 00.095 12.658a.085.085 0 00.027.053 16.206 16.206 0 005 2.525c.027 0 .053 0 .069-.021a12.01 12.01 0 001.025-1.666.061.061 0 00-.037-.085 12 12 0 01-1.568-.745.062.062 0 010-.107c.107-.08.214-.16.31-.24a.068.068 0 01.064-.011 11.791 11.791 0 0010.036 0 .067.067 0 01.064.005c.1.085.2.165.31.246a.068.068 0 010 .107 10.532 10.532 0 01-1.564.747.061.061 0 00-.032.091 13.174 13.174 0 001.014 1.655.058.058 0 00.069.021 16.676 16.676 0 005.007-2.525.059.059 0 00.027-.053A16.716 16.716 0 0016.96 1.282c0-.011-.016-.021-.027-.021zm-10.25 9.129a2.041 2.041 0 111.815-2.029 1.923 1.923 0 01-1.815 2.029zm6.673 0a2.041 2.041 0 111.815-2.029 1.923 1.923 0 01-1.815 2.029z"
                  fill="#5e5b70"
                />
              </svg>
            </a>
            <a
              class="c25"
              href="https://t.me/onomyprotocol"
              target="_blank"
            >
              <svg
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M2.966 11.085L13.195 6.87c1.01-.439 4.435-1.844 4.435-1.844s1.583-.614 1.448.875c-.044.615-.4 2.766-.746 5.093l-1.1 6.893s-.088 1.01-.834 1.185a3.611 3.611 0 01-2.2-.79c-.176-.132-3.293-2.107-4.434-3.073a.832.832 0 01.044-1.4 168.85 168.85 0 004.61-4.39c.527-.527 1.054-1.756-1.141-.263l-6.184 4.168a2.58 2.58 0 01-2.02.044c-1.317-.395-2.854-.922-2.854-.922s-1.054-.659.746-1.361z"
                  fill="#5e5b70"
                />
              </svg>
            </a>
            <a
              class="c25"
              href="https://medium.com/onomy-protocol"
              target="_blank"
            >
              <svg
                viewBox="0 0 195 195"
                xmlns="http://www.w3.org/2000/svg"
              >
                <defs />
                <g
                  fill="none"
                  fill-rule="evenodd"
                  id="Page-1"
                  stroke="none"
                  stroke-width="1"
                >
                  <g
                    fill-rule="nonzero"
                    id="Monogram"
                  >
                    <path
                      d="M46.5340803,65.2157554 C46.6968378,63.6076572 46.0836,62.018231 44.8828198,60.93592 L32.6512605,46.2010582 L32.6512605,44 L70.6302521,44 L99.9859944,108.380952 L125.794585,44 L162,44 L162,46.2010582 L151.542017,56.2281011 C150.640424,56.9153477 150.193188,58.0448862 150.380019,59.1628454 L150.380019,132.837155 C150.193188,133.955114 150.640424,135.084652 151.542017,135.771899 L161.755369,145.798942 L161.755369,148 L110.38282,148 L110.38282,145.798942 L120.963119,135.527337 C122.002801,134.487948 122.002801,134.182246 122.002801,132.592593 L122.002801,73.0417402 L92.585901,147.755438 L88.6106443,147.755438 L54.3622782,73.0417402 L54.3622782,123.115814 C54.0767278,125.221069 54.7759199,127.3406 56.2581699,128.863022 L70.0186741,145.55438 L70.0186741,147.755438 L31,147.755438 L31,145.55438 L44.7605042,128.863022 C46.2319621,127.338076 46.8903838,125.204485 46.5340803,123.115814 L46.5340803,65.2157554 Z"
                      fill="#5e5b70"
                      id="Shape"
                    />
                  </g>
                </g>
              </svg>
            </a>
            <a
              class="c25"
              href="https://twitter.com/onomyprotocol"
              target="_blank"
            >
              <svg
                viewBox="0 0 20 20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M16.555 6.438v.46a10.4 10.4 0 01-.66 3.6 10.744 10.744 0 01-1.961 3.282 9.729 9.729 0 01-3.2 2.4 10.445 10.445 0 01-4.383.921 10.247 10.247 0 01-2.922-.42 9.937 9.937 0 01-2.6-1.181q.42.041.86.04a7.14 7.14 0 002.381-.4 7.457 7.457 0 002.081-1.121 3.592 3.592 0 01-2.081-.73 3.463 3.463 0 01-1.261-1.771 3.579 3.579 0 00.66.06 3.7 3.7 0 00.941-.12 3.472 3.472 0 01-1.461-.67 3.567 3.567 0 01-1.031-1.261 3.749 3.749 0 01-.39-1.591v-.06a3.369 3.369 0 001.641.46 3.617 3.617 0 01-1.171-1.291 3.517 3.517 0 01-.43-1.711 3.574 3.574 0 01.48-1.8 10.262 10.262 0 007.4 3.762 4.156 4.156 0 01-.08-.82 3.5 3.5 0 01.48-1.8 3.627 3.627 0 011.311-1.311 3.462 3.462 0 011.791-.49 3.563 3.563 0 012.622 1.141 6.994 6.994 0 002.281-.881 3.481 3.481 0 01-.61 1.151 3.694 3.694 0 01-.971.851 7.316 7.316 0 002.081-.58 7.525 7.525 0 01-1.798 1.881z"
                  fill="#8d89a3"
                  opacity="0.5"
                />
              </svg>
            </a>
          </div>
          <button
            class="c26"
          >
            Logout
          </button>
        </footer>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
